--- a/ICP-1/Source Code/CSS_InClass/GoogleTask/HTML/index.html
+++ b/ICP-1/Source Code/CSS_InClass/GoogleTask/HTML/index.html
@@ -6,19 +6,21 @@
 
 <h2>Name: Duy Hoang Ho</h2>
 <h2>Class: CSEE 5590 </h2>
-<p>My GitHub Repository for the ICP is CSEE 5590: Web Development</p>
+<p>My GitHub Repository for the ICP is <span style="color:darkred"> CSEE 5590: Web Development </span></p>
 <p> Here are the steps:</p>
 
-<ul>
-  <li>1. Add a repository name</li>
-  <li>2. Add a readme file</li>
-  <li>3. Clone it to Github Desktop</li>
-  <li>4. Add HTML, CSS, Javascript or any other important files related to ICP</li>
-  <li>5. Commit and push the files to GitHub</li>
-</ul>
+<div id = "step_list">
+  <ul>
+    <li>1. Add a repository name</li>
+    <li>2. Add a readme file</li>
+    <li>3. Clone it to Github Desktop</li>
+    <li>4. Add HTML, CSS, Javascript or any other important files related to ICP</li>
+    <li>5. Commit and push the files to GitHub</li>
+  </ul>
+</div>
 
-<a href="https://github.com/benamreview/CSEE5590-ICP/blob/master/Documentation/Capture.PNG">
-  <img src= "https://github.com/benamreview/CSEE5590-ICP/blob/master/Documentation/Capture.PNG?raw=true" target = "_blank" alt="HTML tutorial" style="width:1000px;height:600px;border:0;">
+<a href="https://github.com/benamreview/CSEE5590-ICP/blob/master/ICP-1/Documentation/Capture.PNG?raw=true" target = "_blank">
+  <img src= "https://github.com/benamreview/CSEE5590-ICP/blob/master/ICP-1/Documentation/Capture.PNG?raw=true"  alt="HTML tutorial" style="width:1000px;height:600px;border:0;">
 </a>
 <div>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/ijcSReh3vNE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
