--- a/ICP-2/Source-Code/RPSGame/rockpaperscissors-game.html
+++ b/ICP-2/Source-Code/RPSGame/rockpaperscissors-game.html
@@ -53,7 +53,7 @@
             <input type="submit" id = "submitBtn" value="GO!!!">
         </form>
         <p id="result">RESULTS:</p>
-        <input type="button" id = "replayBtn" onclick="reload()"style="display:none;background-color:red" class="button" value="REPLAY!">
+        <input type="button" id = "replayBtn" onclick="reload()"style="display:none;background-color:yellow" class="button" value="REPLAY!">
     </div>
 
     <script>
@@ -86,14 +86,7 @@
                         uChoice = et[i].value;
                     }
                 }
-
-
-                //Determines User's Choice
-                if (uChoice == 'ROCK') {
-                    document.body.style.backgroundColor = 'cyan';
-                } else if (uChoice == 'PAPER') {
-                    document.body.style.backgroundColor = 'pink';
-                }
+                
                 //Generate NPC's choice
                 var NPCchoice = Math.random();
                 if (NPCchoice <= 1/3) {
@@ -121,15 +114,18 @@
             if (uchoice == "ROCK") {
                 if (npcchoice == "SCISSORS") {
                     // player 1 wins
+                    document.body.style.backgroundColor = 'green';
                     return "CONGRATULATIONS!!! YOU WON!!!";
                 } else {
                     // npc wins
+                    document.body.style.backgroundColor = 'red';
                     return "Unfortunately, you lost! NPC is OP!";
                 }
             }
             else if (uchoice == "PAPER") {
                 if (npcchoice == "ROCK") {
                     // player 1 wins
+                    document.body.style.backgroundColor = 'green';
                     return "CONGRATULATIONS!!! YOU WON!!!";
                 } else {
                     // npc wins
@@ -138,10 +134,10 @@
             }
             else if (uchoice == "SCISSORS") {
                 if (npcchoice == "ROCK") {
-                    v
                     return "Unfortunately, you lost! NPC is OP!";
                 } else {
                     // npc wins
+                    document.body.style.backgroundColor = 'green';
                     return "CONGRATULATIONS!!! YOU WON!!!";
                 }
             }
