--- a/ICP-2/Source-Code/RPSGame/rockpaperscissors-game.html
+++ b/ICP-2/Source-Code/RPSGame/rockpaperscissors-game.html
@@ -86,7 +86,7 @@
                         uChoice = et[i].value;
                     }
                 }
-                
+
                 //Generate NPC's choice
                 var NPCchoice = Math.random();
                 if (NPCchoice <= 1/3) {
@@ -129,11 +129,13 @@
                     return "CONGRATULATIONS!!! YOU WON!!!";
                 } else {
                     // npc wins
+                    document.body.style.backgroundColor = 'red';
                     return "Unfortunately, you lost! NPC is OP!";
                 }
             }
             else if (uchoice == "SCISSORS") {
                 if (npcchoice == "ROCK") {
+                    document.body.style.backgroundColor = 'red';
                     return "Unfortunately, you lost! NPC is OP!";
                 } else {
                     // npc wins
