Fix color coding and added documentation

--- a/ICP-2/Source-Code/RPSGame/rockpaperscissors-game.html
+++ b/ICP-2/Source-Code/RPSGame/rockpaperscissors-game.html
@@ -36,9 +36,9 @@
 </head>
 <body>
 
-<h2>Name: <strong><span style="color:red">Duy Hoang Ho </span> </strong></h2>
-<h2>Class: <span style="color:red"> CSEE 5590: Web Development </span> </h2>
-<h2>Assignment: <span style="color:red">ICP-2 part 1</span></h2>
+<h2>Name: <strong><span style="color:PURPLE">Duy Hoang Ho </span> </strong></h2>
+<h2>Class: <span style="color:PURPLE"> CSEE 5590: Web Development </span> </h2>
+<h2>Assignment: <span style="color:PURPLE">ICP-2 part 1</span></h2>
 
 <h1 style = "text-align: center">Welcome to my ROCK, Paper, Scissors game! </h1>
 <h3 style = "text-align: center;">Please press the <span style = "font-weight:bold;color:blue"> play </span> button to start playing!</h3>
