--- a/ICP-2/Source-Code/MockUp/index.html
+++ b/ICP-2/Source-Code/MockUp/index.html
@@ -14,6 +14,7 @@
 
 <body>
   <div class="container">
+    <!--Top Row -->
     <div class="row">
       <div class="col-sm-2 topimg">
         <img src="mrbean.png" alt="Mr. Bean">
@@ -24,6 +25,7 @@
       </div>
       <hr>
     </div>
+    <!--Middle Row -->
     <div class="row">
       <div class="col-sm-12 middleimg">
         <img src="middlepic.jpg" alt="Mr. Bean">
@@ -31,19 +33,20 @@
       </div>
 
     </div>
+    <!--Bottom Row -->
     <div class="row">
       <div class="col-sm-4 bottomimg">
-        <img src="bottom1.jpg" alt="Mr. Bean">
+        <img src="bottom1.jpg" alt="bottom1">
         <p class = "title">SSJ 1</p>
         <p class = "source">https://www.google.com</p>
       </div>
       <div class="col-sm-4 bottomimg">
-        <img src="bottom2.jpg" alt="Mr. Bean">
+        <img src="bottom2.jpg" alt="bottom2">
         <p class = "title">SSJ GOD</p>
         <p class = "source">https://www.github.com</p>
       </div>
       <div class="col-sm-4 bottomimg">
-        <img src="bottom3.jpg" alt="Mr. Bean">
+        <img src="bottom3.jpg" alt="bottom3">
         <p class = "title">ULTRA</p>
         <p class = "source">https://www.wikipedia.com</p>
       </div>
