update second exercise (jquery)

--- a/ICP-3/SourceCode/In_Class_Exercise/GitHubUserFinder/index.html
+++ b/ICP-3/SourceCode/In_Class_Exercise/GitHubUserFinder/index.html
@@ -2,8 +2,9 @@
 <head>
   <title>Github User Finder</title>
   <link rel="stylesheet" href="style.css">
-  <script type="text/javascript" src="../colorpicker/jquery.js"></script>
+  <script type="text/javascript" src="../PickMyFavoriteColor/jquery.js"></script>
   <script type="text/javascript" src="script.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
 <header>
@@ -14,9 +15,12 @@
     <input id="username" placeholder="enter a github username..." type="text"></input>
   </div>
   <div id="profile">
-    <h2></h2>
-    <div class="avatar"></div>
-    <div class="information"></div>
+    <h2 id = "name"></h2>
+    <div class="avatar">
+    </div>
+    <div class="information">
+
+    </div>
   </div>
 </div>
 
