--- a/ICP-3/SourceCode/In_Class_Exercise/GitHubUserFinder/index.html
+++ b/ICP-3/SourceCode/In_Class_Exercise/GitHubUserFinder/index.html
@@ -5,14 +5,20 @@
   <script type="text/javascript" src="../PickMyFavoriteColor/jquery.js"></script>
   <script type="text/javascript" src="script.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header>
-  <h1>Find Me!</h1>
+  <div class="w3-container w3-center w3-animate-top">
+    <h1 id="title">Find Me!</h1>
+  </div>
 </header>
 <div id="container">
-  <div class="search">
-    <input id="username" placeholder="enter a github username..." type="text"></input>
+  <div class="w3-container w3-center w3-animate-top">
+    <div class="search">
+      <input id="username" placeholder="Enter a GitHub username..." type="text"></input>
+    </div>
   </div>
   <div id="profile">
     <h2 id = "name"></h2>
