--- a/ICP-3/SourceCode/In_Class_Exercise/PickMyFavoriteColor/index2.html
+++ b/ICP-3/SourceCode/In_Class_Exercise/PickMyFavoriteColor/index2.html
@@ -10,7 +10,7 @@
 
     <div id="container">
      <h1>Color Picker</h1>
-
+        <h2>Name: Duy Hoang Ho</h2>
      <input id="color" type="text"/>
      <button id="add-to-favorite">Add to favorites</button>
      <div class="row">
@@ -20,7 +20,8 @@
        </div>
        <div class="column">
          <div id="colors">
-             <div class="flex-container">
+             <div id = "favorite"> List of Favorite Colors: </div>
+             <div class="flex-container" id="favorite-list">
                  <div class="square"></div>
                  <div class="square"></div>
                  <div class="square"></div>
@@ -36,13 +37,10 @@
              </div>
              <br><br>
          </div>
-           <div id = "favorite"> List of Favorite Colors: </div>
-           <div class="flex-container" id="favorite-list">
-
            </div>
-       </div>
        <br/>
       <div class="color-code"></div>
+    </div>
      </div>
    </div>
 
