added initial documentation

--- a/ICP-3/SourceCode/In_Class_Exercise/GitHubUserFinder/index.html
+++ b/ICP-3/SourceCode/In_Class_Exercise/GitHubUserFinder/index.html
@@ -5,6 +5,7 @@
   <script type="text/javascript" src="../PickMyFavoriteColor/jquery.js"></script>
   <script type="text/javascript" src="script.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <!-- w3schools css stylesheet for additional animation of textboxes -->
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -15,15 +16,18 @@
   </div>
 </header>
 <div id="container">
+  <!-- w3 container is used for css animation that slides the text from top to bottom-->
   <div class="w3-container w3-center w3-animate-top">
     <div class="search">
       <input id="username" placeholder="Enter a GitHub username..." type="text"></input>
     </div>
   </div>
   <div id="profile">
+    <!-- display name -->
     <h2 id = "name"></h2>
     <div class="avatar">
     </div>
+    <!-- display information -->
     <div class="information">
 
     </div>
